fixed some header alignment issues

--- a/jquery.weekcalendar.css
+++ b/jquery.weekcalendar.css
@@ -41,16 +41,17 @@
 
 .wc-header{
 	background: #eee;
-	border-top: 1px solid #aaa;
-	border-bottom: 1px solid #aaa;
+  border-width:1px 0;
+  border-style:solid;
 }
 .wc-header table{
 	width: 100%;
   table-layout:fixed;
 }
 
+.wc-grid-timeslot-header,
 .wc-header .wc-time-column-header {
-	width: 6%;	
+	width: 45px;	
 }
 
 .wc-header .wc-scrollbar-shim {
@@ -68,7 +69,6 @@
   overflow:hidden;
 }
 .wc-grid-timeslot-header {
-	width: 6%;
 	background: #eee;	
 }
 
@@ -96,7 +96,7 @@ table.wc-time-slots {
 	overflow: visible;
 	vertical-align: top;
 }
-.wc-day-column-header{border-width: 0 0 0 3px; border-style: double;border-color:transparent;}
+.wc-day-column-header{border-width: 0 0 1px 3px; border-style: solid;border-color:transparent;}
 .wc-scrollable-grid .wc-day-column-last,
 .wc-scrollable-grid .wc-day-column-middle{border-width: 0 0 0 1px; border-style: dashed;}
 .wc-scrollable-grid .wc-day-column-first{border-width: 0 0 0 3px; border-style: double;}
@@ -141,12 +141,14 @@ table.wc-time-slots {
 .wc-column-even.ui-state-hover{background-image:none;border:none;}
 
 .wc-header .wc-today.ui-state-active{background-image:none;}
+.wc-header .wc-today.wc-day-column-header{border-width:0 3px; border-style: solid;}
+.wc-header .wc-user-header{border-width:0;}
+
 .wc-time-slots .wc-day-column.ui-state-default{background:transparent;}
 .wc-time-slots .wc-today.ui-state-active{background-image:none;}
-.wc-header .wc-today.wc-day-column-header{border-width:0 3px; border-style: double;}
-.wc-today.ui-state-active.wc-day-column-middle{border-width:0;}
-.wc-today.ui-state-active.wc-day-column-first{border-left-width:3px;}
-.wc-today.ui-state-active.wc-day-column-last{border-right-width:3px;}
+.wc-header .wc-today.ui-state-active.wc-day-column-middle{border-width:0;}
+.wc-header .wc-today.ui-state-active.wc-day-column-first{border-left-width:3px;}
+.wc-header .wc-today.ui-state-active.wc-day-column-last{border-right-width:3px;}
 
 .wc-full-height-column{
 	display:block;
@@ -166,7 +168,10 @@ table.wc-time-slots {
 
 .wc-hour-header {
 	text-align: right;
-	border-top:none !important;
+}
+.wc-hour-header.ui-state-active,
+.wc-hour-header.ui-state-default{
+  border-width:0 0 1px 0;
 }
 
 .wc-hour-end, .wc-hour-header {
