--- a/skins/default.css
+++ b/skins/default.css
@@ -9,7 +9,6 @@
 .wc-business-hours .wc-time-header-cell{font-weight:bold;}
 .wc-am-pm,
 .wc-business-hours .wc-am-pm {font-size:1em;}
-.wc-header .wc-user-header{border-width:0;}
 .wc-header .wc-today  {font-weight: bold;}
 
 
